--- a/SonidosSimpsons/app/src/main/res/layout/activity_sonidos.xml
+++ b/SonidosSimpsons/app/src/main/res/layout/activity_sonidos.xml
@@ -8,31 +8,27 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".SonidosActivity">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Boton Nuevecico"
-        android:id="@+id/primerLboton"
+    <ImageButton
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:id="@+id/btn1"
+        android:background="@drawable/btndonut"
+        android:adjustViewBounds="false"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button2"
-        android:layout_below="@+id/button3"
-        android:layout_alignRight="@+id/primerLboton"
-        android:layout_alignEnd="@+id/primerLboton"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="43dp"
         android:layout_marginTop="70dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button3"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/button2" />
+    <ImageButton
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:id="@+id/btn2"
+        android:background="@drawable/btndonut"
+        android:adjustViewBounds="false"
+        android:layout_alignTop="@+id/btn1"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="62dp" />
 
 </RelativeLayout>
